...
                                    defaultElevation = 0.dp,
                                    hoveredElevation = 0.dp
                                ),
                            ) {
                                Icon(
                                    Icons.Filled.Add,
                                    contentDescription = "Add workout",
                                    modifier = Modifier
                                        .size(28.dp)
                                )
                            }
                        }
                    }
...
                Column(modifier = Modifier.fillMaxWidth().padding(16.dp)) {

                    Row(
                        horizontalArrangement = Arrangement.spacedBy(8.dp)
                    ) {
                        Button(onClick = { viewModel.fetchAllOnceForBenchmark() }) {
                            Text("Fetch All (RTDB)")
                        }
                    }

                    Spacer(modifier = Modifier.height(12.dp))

                    if (isReady) {
...
